# text-compress-scoring

./: .gitignore  Dockerfile  README.md  pyproject.toml
condenses_node_managing/: client.py  config.py  orchestrator.py  server.py  serving_counter.py
tests/: test_prometheus.py  test_scoring_client.py
text_compress_scoring/: client.py  config.py  schemas.py  scoring_modeling.py  server.py  utils.py
