[tool.hatch.build.targets.wheel]
packages = ["condenses_node_managing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subnet-node-managing"
version = "0.1.0"
description = "Managing & Counting Subnet Nodes (Miners)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.11.1",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/restful-bittensor"
Repository = "https://github.com/yourusername/restful-bittensor.git"


[project.scripts]
condenses-node-managing-start-server = "condenses_node_managing.server:start_server"
